Package remote uberjar distribution

--- a/integrationtests/as-integration-remote-client/pom.xml
+++ b/integrationtests/as-integration-remote-client/pom.xml
@@ -81,6 +81,11 @@
            <scope>test</scope>
         </dependency-->
         <dependency>
+            <groupId>org.infinispan</groupId>
+            <artifactId>infinispan-client-hotrod</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
             <artifactId>arquillian-junit-container</artifactId>
             <scope>test</scope>
