BZ1162849 Rename spring to spring3

--- a/spring/spring/pom.xml
+++ b/spring/spring/pom.xml
@@ -10,7 +10,7 @@
         <relativePath>../../parent/pom.xml</relativePath>
     </parent>
 
-    <artifactId>infinispan-spring</artifactId>
+    <artifactId>infinispan-spring3</artifactId>
     <packaging>bundle</packaging>
 
     <name>Infinispan Spring 3 Integration</name>
