--- a/integrationtests/all-embedded-it/pom.xml
+++ b/integrationtests/all-embedded-it/pom.xml
@@ -22,14 +22,61 @@
          <groupId>javax.transaction</groupId>
          <artifactId>transaction-api</artifactId>
          <version>1.1</version>
+      </dependency>
+         <groupId>javax.cache</groupId>
+         <artifactId>cache-api</artifactId>
          <scope>provided</scope>
       </dependency>
+      <!-- JPA test dependencies -->
+       <dependency>
+           <groupId>org.hibernate</groupId>
+           <artifactId>hibernate-entitymanager</artifactId>
+           <scope>provided</scope>
+       </dependency>
+       <!-- JDBC test dependecies -->
+       <dependency>
+           <groupId>com.mchange</groupId>
+           <artifactId>c3p0</artifactId>
+           <scope>provided</scope>
+       </dependency>
       <dependency>
-         <groupId>org.testng</groupId>
-         <artifactId>testng</artifactId>
-         <version>6.8</version>
+         <groupId>junit</groupId>
+         <artifactId>junit</artifactId>
+         <version>4.11</version>
          <scope>test</scope>
       </dependency>
    </dependencies>
-</project>
 
+    <profiles>
+        <profile>
+            <id>h2</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>com.h2database</groupId>
+                    <artifactId>h2</artifactId>
+                    <version>1.4.180</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <connection.url>jdbc:h2:mem:test;DB_CLOSE_DELAY=-1</connection.url>
+                                <driver.class>org.h2.Driver</driver.class>
+                                <jgroups.bind_addr>127.0.0.1</jgroups.bind_addr>
+                                <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+</project>
