BZ1163907 Add c3p0 to uberjar

--- a/all/embedded-query/pom.xml
+++ b/all/embedded-query/pom.xml
@@ -67,6 +67,10 @@
                            <pattern>org.jboss.logging</pattern>
                            <shadedPattern>infinispanembedded.org.jboss.logging</shadedPattern>
                         </relocation>
+                        <relocation>
+                           <pattern>com.mchange</pattern>
+                           <shadedPattern>infinispanembedded.com.mchange</shadedPattern>
+                        </relocation>
                      </relocations>
                      <createSourcesJar>true</createSourcesJar>
                      <transformers>
