--- a/all/embedded/pom.xml
+++ b/all/embedded/pom.xml
@@ -94,6 +94,11 @@
       </dependency>
 
       <dependency>
+         <groupId>c3p0</groupId>
+         <artifactId>c3p0</artifactId>
+      </dependency>
+
+      <dependency>
          <groupId>javax.cache</groupId>
          <artifactId>cache-api</artifactId>
          <scope>provided</scope>
