--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -64,6 +64,7 @@
       <version.protobuf>2.6.0.redhat-1</version.protobuf>
       <version.protoparser>3.1.4.redhat-1</version.protoparser>
       <version.antlr>3.4</version.antlr>
+      <version.c3p0>0.9.1.2</version.c3p0>
       <version.gnu.getopt>1.0.13.redhat-4</version.gnu.getopt>
       <version.hibernate.core>4.2.14.SP4-redhat-1</version.hibernate.core>
       <version.hibernate.javax.persistence>1.0.1.Final-redhat-2</version.hibernate.javax.persistence>
@@ -452,6 +453,11 @@
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
             <version>${version.xstream}</version>
+         </dependency>
+         <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>${version.c3p0}</version>
          </dependency>
       </dependencies>
    </dependencyManagement>
