--- a/query/pom.xml
+++ b/query/pom.xml
@@ -93,10 +93,6 @@
          <artifactId>infinispan-lucene-directory</artifactId>
       </dependency>
 
-       <dependency>
-           <groupId>c3p0</groupId>
-           <artifactId>c3p0</artifactId>
-      </dependency>
       
       <dependency>
          <groupId>${project.groupId}</groupId>
@@ -123,6 +119,11 @@
            <scope>test</scope>
        </dependency>
 
+       <dependency>
+           <groupId>c3p0</groupId>
+           <artifactId>c3p0</artifactId>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 
    <build>
