--- a/all/cli/pom.xml
+++ b/all/cli/pom.xml
@@ -34,6 +34,14 @@
                      <goal>shade</goal>
                   </goals>
                   <configuration>
+                     <createSourcesJar>true</createSourcesJar>
+
+                     <artifactSet>
+                        <excludes>
+                           <exclude>org.infinispan:infinispan-cli</exclude>
+                        </excludes>
+                     </artifactSet>
+
                      <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>org.infinispan.cli.Main</mainClass>
