--- a/all/embedded/pom.xml
+++ b/all/embedded/pom.xml
@@ -137,7 +137,7 @@
                   <configuration>
                      <artifactSet>
                         <excludes>
-                           <exclude>javax.cache:cache-api:jar:</exclude>
+                           <exclude>org.infinispan:infinispan-embedded</exclude>
                            <exclude>org.fusesource.hawtjni:hawtjni-runtime:jar:</exclude>
                            <exclude>org.fusesource.leveldbjni:leveldbjni:jar:</exclude>
                            <exclude>org.iq80.leveldb:leveldb-api:jar:</exclude>
@@ -202,4 +202,3 @@
    </build>
 
 </project>
-
