--- a/spring/spring/pom.xml
+++ b/spring/spring/pom.xml
@@ -43,6 +43,10 @@
         ]]>
     </description>
 
+    <properties>
+        <infinispan.test.parallel.threads>1</infinispan.test.parallel.threads>
+    </properties>
+
     <developers>
         <developer>
             <id>obergner</id>
