--- a/spring/spring4/pom.xml
+++ b/spring/spring4/pom.xml
@@ -42,6 +42,10 @@
         ]]>
     </description>
 
+    <properties>
+        <infinispan.test.parallel.threads>1</infinispan.test.parallel.threads>
+    </properties>
+
     <developers>
         <developer>
             <id>obergner</id>
