BZ1170547 ISPN-4942 Make uber jars compatible with OSGi

--- a/all/embedded-query/pom.xml
+++ b/all/embedded-query/pom.xml
@@ -32,6 +32,7 @@
    </dependencies>
 
    <build>
+      <finalName>${project.artifactId}-${project.version}</finalName>
       <pluginManagement>
          <plugins>
          </plugins>
