--- a/all/embedded/pom.xml
+++ b/all/embedded/pom.xml
@@ -10,9 +10,14 @@
    </parent>
 
    <artifactId>infinispan-embedded</artifactId>
-   <packaging>bundle</packaging>
+   <packaging>jar</packaging>
    <name>Infinispan Embedded</name>
    <description>Infinispan Embedded All-in-One module</description>
+
+   <properties>
+      <intermediary_jar_name>intermediary-${project.build.finalName}</intermediary_jar_name>
+      <intermediary_jar_path>${project.build.directory}/${intermediary_jar_name}.jar</intermediary_jar_path>
+   </properties>
 
    <dependencies>
       <dependency>
@@ -166,6 +171,7 @@
                      <goal>shade</goal>
                   </goals>
                   <configuration>
+                     <finalName>${intermediary_jar_name}</finalName>
                      <artifactSet>
                         <excludes>
                            <exclude>org.infinispan:infinispan-embedded</exclude>
@@ -230,77 +236,61 @@
             </executions>
          </plugin>
          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <executions>
-               <execution>
-                  <id>unpack</id>
-                  <phase>package</phase>
-                  <goals>
-                     <goal>unpack</goal>
-                  </goals>
-                  <configuration>
-                     <artifactItems>
-                        <artifactItem>
-                           <groupId>${project.groupId}</groupId>
-                           <artifactId>${project.artifactId}</artifactId>
-                           <version>${project.version}</version>
-                           <type>jar</type>
-                           <overWrite>true</overWrite>
-                        </artifactItem>
-                     </artifactItems>
-                     <outputDirectory>${project.build.outputDirectory}</outputDirectory>
-                  </configuration>
-               </execution>
-            </executions>
-         </plugin>
-         <plugin>
             <groupId>org.apache.felix</groupId>
             <artifactId>maven-bundle-plugin</artifactId>
             <executions>
                <execution>
-               <id>bundle-package</id>
-               <phase>package</phase>
-               <goals>
-                  <goal>bundle</goal>
-               </goals>
-               <configuration>
-                  <excludeDependencies>*</excludeDependencies>
-                  <instructions>
-                     <!-- Define packages from dependencies, exported further by current bundle -->
-                     <_exportcontents>
-                        org.infinispan.*,
-                        org.jboss.marshalling.*;version=${version.jboss.marshalling},
-                        org.jgroups.*;version=${version.jgroups},
-                     </_exportcontents>
-                     <Import-Package>
-                        !com.mchange.v2.c3p0,
-                        !com.sun.jmx.mbeanserver,
-                        !javax.cache.*,
-                        !javax.enterprise.*,
-                        !javax.inject.*,
-                        !javax.interceptor.*,
-                        !javax.persistence.*,
-                        !net.jcip.annotations,
-                        !org.apache.logging.*,
-                        !org.hibernate.*,
-                        !org.infinispan.*,
-                        !org.infinispan.client.*,
-                        !org.jgroups.*,
-                        !org.jboss.logmanager,
-                        !org.jboss.modules,
-                        !org.iq80.snappy,
-                        !org.jboss.marshalling.*,
-                        !org.xerial.snappy,
-                        !sun.misc,
-                        !sun.reflect,
-                        !sun.nio.ch,
-                        *
-                     </Import-Package>
-                     <DynamicImport-Package>*</DynamicImport-Package>
-                  </instructions>
-               </configuration>
-            </execution>
+                  <id>default-bundle</id>
+                  <phase>none</phase>
+                  <goals>
+                     <goal>bundle</goal>
+                  </goals>
+               </execution>
+
+               <execution>
+                  <id>bundle-package</id>
+                  <phase>package</phase>
+                  <goals>
+                     <goal>bundle</goal>
+                  </goals>
+                  <configuration>
+                     <instructions>
+                        <!-- Inline the jar created by the maven-shade-plugin.  -->
+                        <Include-Resource>@${intermediary_jar_path}</Include-Resource>
+                        <!-- Define packages from dependencies, exported further by current bundle -->
+                        <_exportcontents>
+                           org.infinispan.*,
+                           org.jboss.marshalling.*;version=${version.jboss.marshalling},
+                           org.jgroups.*;version=${version.jgroups},
+                        </_exportcontents>
+                        <Import-Package>
+                           !com.mchange.v2.c3p0,
+                           !com.sun.jmx.mbeanserver,
+                           !javax.cache.*,
+                           !javax.enterprise.*,
+                           !javax.inject.*,
+                           !javax.interceptor.*,
+                           !javax.persistence.*,
+                           !net.jcip.annotations,
+                           !org.apache.logging.*,
+                           !org.hibernate.*,
+                           !org.infinispan.*,
+                           !org.infinispan.client.*,
+                           !org.jgroups.*,
+                           !org.jboss.logmanager,
+                           !org.jboss.modules,
+                           !org.iq80.snappy,
+                           !org.jboss.marshalling.*,
+                           !org.xerial.snappy,
+                           !sun.misc,
+                           !sun.reflect,
+                           !sun.nio.ch,
+                           *
+                        </Import-Package>
+                        <DynamicImport-Package>*</DynamicImport-Package>
+                     </instructions>
+                  </configuration>
+               </execution>
             </executions>
          </plugin>
          <plugin>
@@ -319,6 +309,11 @@
                            <file>target/classes/features.xml</file>
                            <type>xml</type>
                            <classifier>features</classifier>
+                        </artifact>
+                        <artifact>
+                           <file>target/${project.build.finalName}-shaded-sources.jar</file>
+                           <type>jar</type>
+                           <classifier>sources</classifier>
                         </artifact>
                      </artifacts>
                   </configuration>
