--- a/all/remote/pom.xml
+++ b/all/remote/pom.xml
@@ -16,6 +16,8 @@
 
    <properties>
       <module.skipComponentMetaDataProcessing>true</module.skipComponentMetaDataProcessing>
+      <intermediary_jar_name>intermediary-${project.build.finalName}</intermediary_jar_name>
+      <intermediary_jar_path>${project.build.directory}/${intermediary_jar_name}.jar</intermediary_jar_path>
    </properties>
 
    <dependencies>
@@ -74,11 +76,13 @@
             <artifactId>maven-shade-plugin</artifactId>
             <executions>
                <execution>
+                  <id>none-default</id>
                   <phase>package</phase>
                   <goals>
                      <goal>shade</goal>
                   </goals>
                   <configuration>
+                     <finalName>${intermediary_jar_name}</finalName>
                      <artifactSet>
                         <excludes>
                            <exclude>org.infinispan:infinispan-remote</exclude>
@@ -95,33 +99,17 @@
                      </artifactSet>
                      <createSourcesJar>true</createSourcesJar>
                      <transformers>
-                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
+                           <resources>
+                              <resource>blueprint.xml</resource>
+                              <resource>features.xml</resource>
+                           </resources>
+                        </transformer>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.XmlAppendingTransformer">
+                           <resource>META-INF/beans.xml</resource>
+                        </transformer>
                      </transformers>
-                  </configuration>
-               </execution>
-            </executions>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <executions>
-               <execution>
-                  <id>unpack</id>
-                  <phase>package</phase>
-                  <goals>
-                     <goal>unpack</goal>
-                  </goals>
-                  <configuration>
-                     <artifactItems>
-                        <artifactItem>
-                           <groupId>${project.groupId}</groupId>
-                           <artifactId>${project.artifactId}</artifactId>
-                           <version>${project.version}</version>
-                           <type>jar</type>
-                           <overWrite>true</overWrite>
-                        </artifactItem>
-                     </artifactItems>
-                     <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                   </configuration>
                </execution>
             </executions>
@@ -131,14 +119,20 @@
             <artifactId>maven-bundle-plugin</artifactId>
             <executions>
                <execution>
+                  <id>default-bundle</id>
+                  <phase>none</phase>
+               </execution>
+
+               <execution>
                   <id>bundle-package</id>
                   <phase>package</phase>
                   <goals>
                      <goal>bundle</goal>
                   </goals>
                   <configuration>
-                     <excludeDependencies>*</excludeDependencies>
                      <instructions>
+                        <!-- Inline the jar created by the maven-shade-plugin. -->
+                        <Include-Resource>@${project.build.directory}/${intermediary_jar_name}.jar</Include-Resource>
                         <!-- Define packages from dependencies, exported further by current bundle -->
                         <_exportcontents>
                            org.infinispan.client.hotrod.*,
@@ -179,6 +173,11 @@
                            <file>target/classes/features.xml</file>
                            <type>xml</type>
                            <classifier>features</classifier>
+                        </artifact>
+                        <artifact>
+                           <file>target/${project.build.finalName}-shaded-sources.jar</file>
+                           <type>jar</type>
+                           <classifier>sources</classifier>
                         </artifact>
                      </artifacts>
                   </configuration>
