--- a/server/integration/versions/pom.xml
+++ b/server/integration/versions/pom.xml
@@ -687,7 +687,14 @@
          <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>animal-sniffer-maven-plugin</artifactId>
-            <version>1.9</version>
+            <version>1.12</version>
+            <dependencies>
+               <dependency>
+                  <groupId>org.ow2.asm</groupId>
+                  <artifactId>asm-all</artifactId>
+                  <version>5.0.3</version>
+               </dependency>
+            </dependencies>
             <configuration>
                <signature>
                   <groupId>org.codehaus.mojo.signature</groupId>
