--- a/all/pom.xml
+++ b/all/pom.xml
@@ -3,7 +3,7 @@
    <modelVersion>4.0.0</modelVersion>
    <parent>
       <groupId>org.infinispan</groupId>
-      <artifactId>infinispan-bom</artifactId>
+      <artifactId>infinispan-parent</artifactId>
       <version>6.2.0-redhat-SNAPSHOT</version>
       <relativePath>../parent/pom.xml</relativePath>
    </parent>
