--- a/integrationtests/all-embedded-it/pom.xml
+++ b/integrationtests/all-embedded-it/pom.xml
@@ -23,6 +23,7 @@
          <artifactId>transaction-api</artifactId>
          <version>1.1</version>
       </dependency>
+      <dependency>
          <groupId>javax.cache</groupId>
          <artifactId>cache-api</artifactId>
          <scope>provided</scope>
@@ -35,7 +36,7 @@
        </dependency>
        <!-- JDBC test dependecies -->
        <dependency>
-           <groupId>com.mchange</groupId>
+           <groupId>c3p0</groupId>
            <artifactId>c3p0</artifactId>
            <scope>provided</scope>
        </dependency>
