--- a/all/remote/pom.xml
+++ b/all/remote/pom.xml
@@ -155,6 +155,7 @@
          <plugin>
             <groupId>org.apache.felix</groupId>
             <artifactId>maven-bundle-plugin</artifactId>
+            <version>2.4.0</version>
             <executions>
                <execution>
                   <id>default-bundle</id>
@@ -182,6 +183,7 @@
                            !${project.groupId}.*.logging
                         </Export-Package>
                         <Import-Package>
+                           !infinispan.*,
                            !sun.misc,
                            !sun.reflect,
                            !net.jcip.annotations,
@@ -198,6 +200,7 @@
          <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>build-helper-maven-plugin</artifactId>
+            <version>1.8</version>
             <executions>
                <execution>
                   <id>attach-artifacts</id>
@@ -224,6 +227,7 @@
          </plugin>
          <plugin>
             <artifactId>maven-source-plugin</artifactId>
+            <version>2.3</version>
             <executions>
                <execution>
                   <id>attach-sources</id>
@@ -233,6 +237,7 @@
          </plugin>
          <plugin>
             <artifactId>maven-jar-plugin</artifactId>
+            <version>2.4</version>
             <executions>
                <execution>
                   <id>build-test-jar</id>
