--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -58,11 +58,12 @@
    </issueManagement>
 
    <properties>
-      <version.protostream>2.0.3.Final-redhat-1</version.protostream>
+      <version.protostream>3.0.0.Alpha2-redhat-1</version.protostream>
       <version.aesh>0.33.12.redhat-1</version.aesh>
       <version.commons.pool>1.6.redhat-6</version.commons.pool>
       <version.protobuf>2.6.0.redhat-1</version.protobuf>
       <version.protoparser>3.1.4.redhat-1</version.protoparser>
+      <version.javassist>3.18.1-GA-redhat-1</version.javassist>
       <version.antlr>3.4</version.antlr>
       <version.c3p0>0.9.1.2</version.c3p0>
       <version.gnu.getopt>1.0.13.redhat-4</version.gnu.getopt>
