--- a/integrationtests/osgi/pom.xml
+++ b/integrationtests/osgi/pom.xml
@@ -175,6 +175,7 @@
       <defaultExcludedTestGroup></defaultExcludedTestGroup>
       <infinispan.test.parallel.threads>1</infinispan.test.parallel.threads>
       <infinispan.test.jgroups.protocol>tcp</infinispan.test.jgroups.protocol>
+      <skipOSGiTests>${skipTests}</skipOSGiTests>
    </properties>
 
    <build>
