--- a/server/integration/versions/pom.xml
+++ b/server/integration/versions/pom.xml
@@ -41,6 +41,8 @@
       <version.org.xerial.snappy>1.0.5</version.org.xerial.snappy>
       <version.xml.maven.plugin>1.0</version.xml.maven.plugin>
       <version.org.infinispan.protostream>3.0.0.Alpha2-redhat-1</version.org.infinispan.protostream>
+      <version.protoparser>3.1.4.redhat-1</version.protoparser>
+      <version.javassist>3.18.1-GA-redhat-1</version.javassist>
       <version.protobuf>2.6.0.redhat-1</version.protobuf>
       <version.http.client>4.3</version.http.client>
       <version.org.picketbox>4.0.19.SP8-redhat-1</version.org.picketbox>
