--- a/all/embedded-query/pom.xml
+++ b/all/embedded-query/pom.xml
@@ -113,7 +113,7 @@
                         </relocation>
                         <relocation>
                            <pattern>org.jboss.logging</pattern>
-                           <shadedPattern>infinispanembedded.org.jboss.logging</shadedPattern>
+                           <shadedPattern>infinispan.org.jboss.logging</shadedPattern>
                         </relocation>
                         <relocation>
                            <pattern>org.slf4j</pattern>
