BZ1180473 Upgrade protostream to 3.0.0.Alpha5-redhat-1

--- a/all/remote/pom.xml
+++ b/all/remote/pom.xml
@@ -134,6 +134,10 @@
                            <shadedPattern>infinispan.com.google</shadedPattern>
                         </relocation>
                         <relocation>
+                           <pattern>javassist</pattern>
+                           <shadedPattern>infinispan.javassist</shadedPattern>
+                        </relocation>
+                        <relocation>
                            <pattern>com.squareup</pattern>
                            <shadedPattern>infinispan.com.squareup</shadedPattern>
                         </relocation>
